--- a/kitchen.yml
+++ b/kitchen.yml
@@ -1,31 +1,31 @@
 ---
 driver:
   name: vagrant
-
-## The forwarded_port port feature lets you connect to ports on the VM guest
-## via localhost on the host.
-## see also: https://www.vagrantup.com/docs/networking/forwarded_ports
-
-#  network:
-#    - ["forwarded_port", {guest: 80, host: 8080}]
+  box_download_insecure: true
+  customize:
+    memory: 1024
+    cpus: 1
+  network:
+   - ['private_network', ip: '<%= ENV['CMK_IP'] %>']
+   # - ['public_network', bridge: '<%= ENV['ETH'] %>']
+   # - ['public_network', bridge: '<%= ENV['ETH'] %>', ip: '<%= ENV['CMK_IP'] %>'
 
 provisioner:
   name: chef_zero
-
-  ## product_name and product_version specifies a specific Chef product and version to install.
-  ## see the Chef documentation for more details: https://docs.chef.io/workstation/config_yml_kitchen/
-  #  product_name: chef
-  #  product_version: 17
+  product_name: chef
+  install_strategy: once
+  deprecations_as_errors: true
+  treat_deprecation_warnings_as_errors: true
+  chef_license: accept-no-persist
 
 verifier:
   name: inspec
 
 platforms:
-  - name: ubuntu-20.04
-  - name: centos-8
+  - name: bento/almalinux-8
 
 suites:
-  - name: default
+  - name: cmkpod
     verifier:
       inspec_tests:
         - test/integration/default
